--- a/gb/25/1/24/n14421099.md
+++ b/gb/25/1/24/n14421099.md
@@ -9,7 +9,7 @@
 	<p>【大纪元2025年01月24日讯】2025年1月20日，中共国安部副部长石好勇空降担任福建省委政法委书记。这是继董经纬2023年7月空降香港后，又一个调到中共对外统战重地的国安高层。福建是中共对台前线省份，由国安背景的官员掌管福建维稳，值得关注。</p>
 <h2>中共国安部副部长空降福建 或涉对台阴谋</h2>
 <p>石好勇2022年2月16日才首次以国安副部长身份现身，他升任国安部副部长前担任平安中国建设协调小组办公室副主任，该办公室主任当时是陈一新，他算得上是陈的心腹马仔。石好勇背景神秘，在网络上翻查他的背景资料，只查到他于2016年5月至2017年11月短暂挂任吉林省延边朝鲜族自治州副州长、延边州委常委。</p>
-<p>中共近年对台统战，其中一个重要手段是推动所谓两岸融合发展示范区，而中共的统战计划也穿插其中。台湾网红八炯与歌手陈柏源早前就合作拍片，揭露中共借台青创业基地等拉拢利诱台湾网红对台统战的黑幕，包括诱拉台湾民众申办中国的身份证。</p>
+<p>中共近年对台统战，其中一个重要手段是在福建推动所谓两岸融合发展示范区，而中共的统战计划也穿插其中。台湾网红八炯与歌手陈柏源早前就合作拍片，揭露中共在福建借台青创业基地等拉拢利诱台湾网红对台统战的黑幕，包括诱拉台湾民众申办中国的身份证。</p>
 <p>在福建的统战基地布局之外，中共在对台前线福建派驻国安背景的政法委书记，可能与国安运作加入到当地常规的维稳任务有关。</p>
 <p>现在许多人已将台湾受到的威胁与香港对比。在2019年香港“反送中”运动期间，中共国安部就曾秘密介入。当时曾传出有大量中共“国安便衣”，乔装混入“反送中”人群，使用一种可放入背包的便携式感应设备，即可在一定距离下，读取到示威者的身份证资讯。事实上中共国安所为远不止这些，当时一些自杀或原因不明的港人死亡事件，背后是否涉及中共国安因素，至今仍不清楚。</p>
 <p>尽管1997年主权移交但仍保有一定自由度的香港，2020年以来已被中共的铁幕罩紧。台湾人要从中吸取教训。</p>
@@ -21,45 +21,43 @@
 <p>最近中共内部消息指国安头子陈一新势力坐大。</p>
 <p>中共公安内部人士此前对大纪元透露，在海外攻击法轮功，是中共新任国安部长陈一新为了权力野心向上邀功请赏的计划之一。旅澳法学家袁红冰教授也曾向大纪元披露，这些计划直接来自中南海最高层的阴谋布局，主使者正是习近平。</p>
 <p>袁红冰透露，中共经过内部的调整，截止2024年12月底，实际上就是由国安部部长陈一新主持海外对法轮功的打击。而以前是由“610办公室”和政法委协调领导。</p>
-<p>袁红冰近日告知，中共体制内良心人士透露，2024年12月底，中共国安部部长陈一新对中共海外全面打击法轮功的任务布置，提到2025年中共海外打击法轮功的重点，两个地区。一个是美国，一个是台湾。而对台湾地区法轮功的统战和打击，重点要放在台湾法轮功媒体负责人和骨干力量，以及有社会影响力的人士身上。</p>
+<p>袁红冰近日告知大纪元，中共体制内良心人士透露，2024年12月底，中共国安部部长陈一新对中共海外全面打击法轮功的任务布置，提到2025年中共在海外打击法轮功的重点，一个是美国，一个是台湾。而对台湾法轮功的统战和打击，重点放在台湾法轮功媒体负责人和骨干力量，以及有社会影响力的人士身上。</p>
 <p>在笔者看来，中共用特务手法针对信仰“真、善、忍”的法轮功团体，是不可能真正奏效的，无神论的中共不会对真正的正法修炼人起作用，只能乱个别人。甚至特务进入法轮功，良知尚存者会被同化；对修炼人犯罪、无可救药者日后必然罪责难逃。</p>
 <p>当然，在中共企图在台湾跨境迫害法轮功的过程中，从政客到社会各阶层，一旦有人被收买利用，就很可悲。</p>
 <h2>台湾有人秘密帮中共抹黑法轮功 政府应警觉</h2>
-<p>笔者获悉，一位不便具名的海外反共学者东平（化名，法轮功的支持者），去年收到一名台湾学者主动发给他的几篇攻击法轮功的东西，包括视频。东平和该台湾学者认识但不熟悉，他因此怀疑该人是中共的人，因为一般人不会主动为中共做反法轮功的宣传。</p>
+<p>笔者获悉，一位不便具实名的海外反共学者东平（化名，法轮功的支持者），去年收到一名台湾学者主动发给他的几篇抹黑、攻击法轮功的东西，包括视频。东平和该台湾学者认识但不熟悉，他因此怀疑该人是中共的人，因为一般人不会主动为中共做反法轮功的宣传。</p>
 <p>法轮功作为自1999年起遭中共强权打压的信仰团体，一直和平抗争，并且洪传到全球一百多个国家。在台湾，法轮功学员声援中国大陆的反迫害，声势浩大。多年来在台湾，无论政府和民间，都对法轮功赞誉有加，两岸对于法轮功的态度对比，也让中共如芒在背。</p>
 <p>但总会有些人被中共收买，做着伤害台湾人的“亲者痛、仇者快”的事。有人偷偷主动为中共抹黑法轮功做宣传，这会让台湾民众感到不齿。</p>
-<p>笔者认为，从中共国安部副部长石好勇空降福建，值得台湾关注。在此我呼吁，台湾国安部门有必要提高对中共国安和统战系统同步介入对台事务的警惕。其中，可将中共跨境侵扰台湾法轮功作为专案布防，比如掌握岛内亲共人士的反法轮功动向，制止侵扰行为，这也是保护台湾安全、彰显保护自由台湾价值的一环。</p>
-<p>责任编辑：孙芸#</p>
+<p>笔者认为，中共国安部副部长石好勇空降福建，值得台湾关注。在此我呼吁，台湾国安部门有必要提高对中共国安和统战系统同步介入对台“灰色作战”的警惕。台湾国安部门可将中共跨境侵扰台湾法轮功作为专案布防，比如掌握岛内亲共人士的反法轮功动向，制止侵扰行为，这也是保护台湾安全、彰显保护自由台湾价值的一环。</p>
 <p>（大纪元首发）</p>
-	
+<p>责任编辑：孙芸#</p>
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/23/4/24/n13980500.md#1">网传中共政法委操控方斌案秘件 陈一新签字</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309933.md#1">觅真：曝光国安部长陈一新迫害法轮功的罪行</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/11/30/n14381998.md#1">追查国际调查中共国安部长陈一新犯罪事实</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383992.md#1">爆料者：攻击神韵的幕后中共高官是陈一新</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/27/n11481511.md#1" target="_blank">晓明：回顾历史，拒绝遗忘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/3/n11232919.md#1" target="_blank">加拿大温莎市宣布 五月为该市法轮大法月</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/2/14/n11044461.md#1" target="_blank">钟声：他们晚年为何忏悔</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/30/n11289569.md#1" target="_blank">纽约州六位参议员祝贺法轮大法日</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418304.md#1">【未解之谜】2025预言盘点——中国篇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418708.md#1">台故宫推筑城风云特展 看台湾独特筑城故事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416009.md#1">【未解之谜】皮行者牧场（一）：美国境内的时空门？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/5/n14406705.md#1">【古道人生】继母诚心培育前妻所生的三个儿子功成名就</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419892.md#1">【晚间新闻】川普派1500美军到边境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419888.md#1">【中国禁闻】川习通话 普习视讯 专家析大国博弈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/23/n14420201.md#1">【秦鹏观察】美中俄新三国演义 川普突对华征税</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419471.md#1">政局敏感 传中国内部有人等两个时机举事</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419043.md#1">中国面临长期通货紧缩 大跃进以来首次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419224.md#1">“三桶油”营收利润大跌 中国石化业遇拐点</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418338.md#1">刀郎落榜多个音乐奖 被称演艺界“罗刹海市”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14420134.md#1">赵薇主动公布离婚日期 已清空黄有龙公司股票</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418418.md#1">真人《魔发奇缘》公主 弗萝伦丝普伊是热门人选</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418286.md#1">港星杜丽莎揭《歌手》潜规则：不是单纯比赛</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419144.md#1">剧集《漂白》被指抄袭南都报导《漂白》各方回应</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414937.md#1">人生两阶段是断崖式衰老期 延缓老化有方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418616.md#1">如何培养出高情商孩子？ 专家教你7招</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/12/n14411648.md#1">过年零食吃什么好？中医师推荐3类健康零食</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/22/n14419447.md#1">美国有个神秘湖泊 湖水每年会消失一季</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14419078.md#1">中医美白三大关键！改善肤色提升明亮度</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/18/n14533738.md#1">太子密谋造反 李渊轻诺废储 李世民回朝只是付诸一笑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/2/n14543500.md#1">【未解之谜】深度解读《天使的遗言》使命与未来 龙树谅传递的终极信息</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/21/n14395345.md#1">【古道人生】对人宽和仁厚最终救了自己两次命</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541303.md#1">浮生行吟：说说两个“字”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540909.md#1">【未解之谜】“午夜之锤”早已被预知？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544980.md#1">【直播】川普签署“大而美法案”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545641.md#1">【马克时空】服务一甲子 F-5告别台湾天空</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545198.md#1">【车评】越野猛兽  2025 Toyota Tundra TRD Rally</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544650.md#1">煎蛋不必翻面 专家分享不用油或黄油的妙招</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544420.md#1">罗马仕被曝停工停产 数十万充电宝无钱退款</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544361.md#1">德媒：中国电动车市场泡沫即将破裂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544376.md#1">章子怡《酱园弄》上映 9岁女儿客串不怯场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545591.md#1">杨幂上台不慎踩裙?跌倒 临场反应令人惊叹</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545630.md#1">陈思诚新片票房惨淡 上映首日9小时仅卖395万</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14544400.md#1">好莱坞男星麦可·麦德森骤逝 享寿67岁</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545423.md#1">第27届台北电影奖完整名单 《大风之岛》摘首奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542256.md#1">避免洗肾 中医传统疗法助肾功能回升</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/3/n14543926.md#1">专家：经常做恶梦的人 早死概率增为3倍</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542657.md#1">香蕉的颜色和斑点透露了什么</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540707.md#1">夏日沙拉这样做 清爽又健康 色彩缤纷又开胃</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/25/1/24/n14421099.htm">岳山：中共国安副部长空降福建涉对台阴谋？</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/25/1/24/n14421099.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
